# libde265

dec265/: CMakeLists.txt  dec265.cc  hevcreader.cpp  hevcreader.h  yuvwriter.cpp  yuvwriter.h
libde265/: CMakeLists.txt
libde265/encoder/: CMakeLists.txt
